<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.1</version>
        <relativePath/>
    </parent>

    <groupId>com.ornek</groupId>
    <artifactId>eHalisaha</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>eHalisaha</name>
    <description>eHalisaha</description>

    <properties>
        <java.version>21</java.version>

        <!-- Boot 4 ile uyumlu springdoc 3.x -->
        <springdoc.version>3.0.0</springdoc.version>

        <!-- Testcontainers -->
        <testcontainers.version>1.21.4</testcontainers.version>

        <!-- Selenium client -->
        <selenium.version>4.39.0</selenium.version>

        <!-- Lombok -->
        <lombok.version>1.18.36</lombok.version>

        <!-- Maven test plugins -->
        <maven.surefire.version>3.5.2</maven.surefire.version>

        <!-- Jenkins pipeline'da ayrı stage'ler için kontrol bayrakları -->
        <skipUnitTests>false</skipUnitTests>
        <skipITs>false</skipITs>

        <!-- Encoding (her yerde UTF-8) -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>

    </properties>

    <!-- Testcontainers modüllerine tek yerden version yönetimi -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Web (MVC) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>

        <!-- Validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Security -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- JPA -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- PostgreSQL Driver -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Actuator -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Swagger / OpenAPI -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>

        <!-- TEST: Spring Boot test altyapısı -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Boot 4: WebMVC test starter (AutoConfigureMockMvc yeni modülde) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Testcontainers -->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>selenium</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Selenium client -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <!-- Lombok annotation processing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- 3) UNIT TESTS (Surefire) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
                    <!-- Jenkins'te stage bazlı çalıştırmak için -->
                    <skipTests>${skipUnitTests}</skipTests>

                    <!-- Sadece Unit test isimleri -->
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>

                    <!-- IT/E2E'leri unit stage'inden ayır -->
                    <excludes>
                        <exclude>**/*IT.java</exclude>
                        <exclude>**/*E2E*.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- 4) INTEGRATION TESTS (Failsafe) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
                    <!-- Jenkins'te stage bazlı çalıştırmak için -->
                    <skipITs>${skipITs}</skipITs>

                    <includes>
                        <include>**/*IT.java</include>
                    </includes>
                    <excludes>
                        <exclude>**/*E2E*.java</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- ===========================
         E2E (Selenium) Profile
         Runs only *E2E*.java tests
         =========================== -->
    <profiles>
        <profile>
            <id>e2e</id>
            <properties>
                <skipUnitTests>true</skipUnitTests>
                <skipITs>true</skipITs>

                <!-- DEFAULTS: hiçbir şey vermezsen bile çalışsın -->
                <e2e.baseUrl>http://localhost:8080</e2e.baseUrl>
                <e2e.seleniumUrl>http://localhost:14444/wd/hub</e2e.seleniumUrl>

                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.version}</version>
                        <configuration combine.self="override">
                            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
                            <skipTests>false</skipTests>
                            <reportsDirectory>${project.basedir}/e2e-reports</reportsDirectory>

                            <includes>
                                <include>**/*E2E*.java</include>
                            </includes>
                            <excludes>
                                <exclude>**/*IT.java</exclude>
                                <exclude>**/*Test.java</exclude>
                                <exclude>**/*Tests.java</exclude>
                            </excludes>

                            <systemPropertyVariables>
                                <BASE_URL>${e2e.baseUrl}</BASE_URL>
                                <SELENIUM_URL>${e2e.seleniumUrl}</SELENIUM_URL>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
